@@ -15,6 +15,7 @@ Repository `tarball download <http://pysnmp.cvs.sourceforge.net/viewvc/pysnmp/py
 - Fixed crash at oneliner compatibility code on EOM response.
 - Fixed crash in hlapi.transport module.
 - Fixed OID resolution issues that roots at node 0 and 2.
+- Fix to MIB builder to fail gracefully on corrupted MIB package encounter.
 - Source code re-linted
 
 Revision 4.3.0, released 28-09-2015
